bases/generic-web-app/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
  type: ClusterIP
