bases/generic-web-app/resources/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: $(DEPLOYMENT_NAME).svc.$(CLUSTER_NAME).$(DOMAIN)
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 8000
  tls:
  - hosts:
    - $(DEPLOYMENT_NAME).svc.$(CLUSTER_NAME).$(DOMAIN)
